--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,34 +4,108 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="#2fbf25"
     tools:context="com.example.balinux.crudsqlite.MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#2fbf25">
+        
+        <TextView
+            android:padding="16dp"
+            android:gravity="center_vertical"
+            android:textSize="30dp"
+            android:text="List Hutang Makan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:background="#fff"
+        android:padding="10dp">
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+
+            <Button
+                android:onClick="btnCreate"
+                android:background="@drawable/ic_utang"
+                android:layout_width="120dp"
+                android:layout_height="120dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-10dp"
+                android:text="Buat UTANG!!!"
+                android:textColor="#000"
+                android:layout_marginBottom="30dp"/>
+
+            <Button
+                android:onClick="btnCreate"
+                android:background="@drawable/ic_rekap"
+                android:layout_width="120dp"
+                android:layout_height="120dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-10dp"
+                android:text="CICICLAN"
+                android:textColor="#000"
+                android:layout_marginBottom="30dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <Button
+                android:onClick="btnRead"
+                android:background="@drawable/ic_list"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-20dp"
+                android:text="LIST UTANG"
+                android:textColor="#000"
+                android:layout_marginBottom="30dp"/>
+
+
+            <Button
+                android:onClick="btnRead"
+                android:background="@drawable/ic_tagihan"
+                android:layout_width="120dp"
+                android:layout_height="120dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-10dp"
+                android:text="TAGIHAN"
+                android:textColor="#000"
+                android:layout_marginBottom="30dp"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-    
-    <Button
-        android:onClick="btnCreate"
-        android:text="CREATE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:onClick="btnRead"
-        android:text="READ"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Createa by Balinux" />
+        android:text="Created by Balinux" />
 
 </LinearLayout>
